[package]
name = "tisane-relay"
version = "0.1.0"
edition = "2024"

[dependencies]
infusion = { path = "../infusion" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "migrate", "uuid", "chrono"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "gzip", "rustls-tls"] }
dotenv = "0.15"
hex = "0.4"
ed25519-dalek = "2"
rand = "0.8"
